chore: add jest config and scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "![README Photo](https://github.com/rmanguinho/clean-ts-api/raw/master/public/img/logo-course.png)",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch"
+    "test": "jest --watch --silent --noStackTrace --runInBand",
+    "test:verbose": "jest --watch --runInBand",
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage"
   },
   "repository": {
     "type": "git",
