--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/shimarrudz/CleanNodeAPI#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.7",
     "@types/node": "^20.8.10",
     "@types/validator": "^13.11.7",
@@ -35,6 +36,7 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "bcrypt": "^5.1.1",
     "eslint": "^8.53.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-plugin-import": "^2.29.0",
