--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "![README Photo](https://github.com/rmanguinho/clean-ts-api/raw/master/public/img/logo-course.png)",
   "main": "index.js",
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --watch --silent --noStackTrace --runInBand",
     "test:verbose": "jest --watch --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.2.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.7",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.8.10",
@@ -32,6 +34,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.0.2",
+    "sucrase": "^3.35.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -44,6 +47,7 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "express": "^4.18.2",
     "validator": "^13.11.0"
   }
 }
