--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@types/jest": "^29.5.7",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.8.10",
+    "@types/supertest": "^6.0.2",
     "@types/validator": "^13.11.7",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.0.2",
     "sucrase": "^3.35.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
