--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "express": "^4.18.2",
+    "fast-glob": "^3.3.2",
     "validator": "^13.11.0"
   }
 }
