--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.7",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.8.10",
     "@types/supertest": "^6.0.2",
@@ -51,6 +52,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "express": "^4.18.2",
     "fast-glob": "^3.3.2",
+    "jsonwebtoken": "^9.0.2",
     "validator": "^13.11.0"
   }
 }
