--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "sucrase-node src/main/server.ts",
+    "build": "rimraf dist && tsc",
     "test": "jest --watch --silent --noStackTrace --runInBand",
     "test:verbose": "jest --watch --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
