--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,12 @@
         "target": "ES2019",
         "esModuleInterop": true,
         "allowJs": true
-    }
+    },
+    "include": [ 
+        "src"
+    ],
+    "exclude": [
+        "**/*.spec.ts",
+        "**/*.test.ts"
+    ]
 }
