--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/main/server.ts",
     "build": "rimraf dist && tsc",
-    "debug": "node --inspect=0.0.0.0:9222 --nolazy dist/main/server.ts",
+    "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.ts",
     "up": "npm run build && docker-compose up -d",
     "stop": "docker-compose down",
     "test": "jest --watch --silent --noStackTrace --runInBand",
@@ -57,6 +57,7 @@
     "express": "^4.18.2",
     "fast-glob": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.0.3",
     "validator": "^13.11.0"
   }
 }
