--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
         "module": "CommonJS",
         "target": "ES2019",
         "esModuleInterop": true,
+        "sourceMap": true,
+        "rootDir": "src",
         "allowJs": true
     },
     "include": [ 
